Added LogService, Fixed some errors in setup

--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -66,6 +66,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jadira.usertype</groupId>
+			<artifactId>usertype.core</artifactId>
+			<version>3.1.0.CR8</version>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
