Fixed #12 rest-validation

--- a/rest-war/pom.xml
+++ b/rest-war/pom.xml
@@ -85,6 +85,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -95,7 +101,8 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Dependencies>deployment.safesendserver.ear.safesendserver-jar-1.0-SNAPSHOT.jar</Dependencies>
+							<Dependencies>deployment.safesendserver.ear.safesendserver-jar-1.0-SNAPSHOT.jar
+							</Dependencies>
 						</manifestEntries>
 					</archive>
 				</configuration>
