--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,11 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
+			WEB-INF/spring-security.xml,
 			classpath:/applicationContext.xml
 		</param-value>
 	</context-param>
+
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -30,5 +32,13 @@
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 </web-app>
