Spring-security configured

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -2,85 +2,85 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>se.teamgejm.safesendserver</groupId>
-    <version>1.0-SNAPSHOT</version>
-    <artifactId>safesendserver-ear</artifactId>
-    <packaging>ear</packaging>
+	<groupId>se.teamgejm.safesendserver</groupId>
+	<version>1.0-SNAPSHOT</version>
+	<artifactId>safesendserver-ear</artifactId>
+	<packaging>ear</packaging>
 
-    <name>safesendserver EAR module</name>
+	<name>safesendserver EAR module</name>
 
-    <dependencies>
+	<dependencies>
 
-        <!-- Depend on the ejb module and war so that we can package them -->
-        <dependency>
-            <groupId>se.teamgejm.safesendserver</groupId>
-            <artifactId>safesendserver-rest-war</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>se.teamgejm.safesendserver</groupId>
-            <artifactId>safesendserver-web-war</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>se.teamgejm.safesendserver</groupId>
-            <artifactId>safesendserver-jar</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>ejb</type>
-        </dependency>
-    </dependencies>
+		<!-- Depend on the ejb module and war so that we can package them -->
+		<dependency>
+			<groupId>se.teamgejm.safesendserver</groupId>
+			<artifactId>safesendserver-rest-war</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>se.teamgejm.safesendserver</groupId>
+			<artifactId>safesendserver-web-war</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>se.teamgejm.safesendserver</groupId>
+			<artifactId>safesendserver-jar</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>ejb</type>
+		</dependency>
+	</dependencies>
 
-    <build>
-        <finalName>safesendserver</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-ear-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <!-- Tell Maven we are using Java EE 6 -->
-                    <version>6</version>
-                    <!-- Use Java EE ear libraries as needed. Java EE ear libraries are
-                        in easy way to package any libraries needed in the ear, and automatically
-                        have any modules (EJB-JARs and WARs) use them -->
-                    <defaultLibBundleDir>lib</defaultLibBundleDir>
-                    <modules>
-                        <!-- Default context root of the web app is /myproject-web. If a custom
-                            context root is needed, uncomment the following snippet to register our War
-                            as a web module and set the contextRoot property -->
-                        <webModule>
-                            <groupId>se.teamgejm.safesendserver</groupId>
-                            <artifactId>safesendserver-rest-war</artifactId>
-                            <contextRoot>/</contextRoot>
-                        </webModule>
-                        <webModule>
-                            <groupId>se.teamgejm.safesendserver</groupId>
-                            <artifactId>safesendserver-web-war</artifactId>
-                            <contextRoot>/admin</contextRoot>
-                        </webModule>
+	<build>
+		<finalName>safesendserver</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ear-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<!-- Tell Maven we are using Java EE 6 -->
+					<version>6</version>
+					<!-- Use Java EE ear libraries as needed. Java EE ear libraries are
+						in easy way to package any libraries needed in the ear, and automatically
+						have any modules (EJB-JARs and WARs) use them -->
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<modules>
+						<!-- Default context root of the web app is /myproject-web. If a custom
+							context root is needed, uncomment the following snippet to register our War
+							as a web module and set the contextRoot property -->
+						<webModule>
+							<groupId>se.teamgejm.safesendserver</groupId>
+							<artifactId>safesendserver-rest-war</artifactId>
+							<contextRoot>/</contextRoot>
+						</webModule>
+						<webModule>
+							<groupId>se.teamgejm.safesendserver</groupId>
+							<artifactId>safesendserver-web-war</artifactId>
+							<contextRoot>/web</contextRoot>
+						</webModule>
 
-                    </modules>
-                </configuration>
-            </plugin>
-            <!-- The JBoss AS plugin deploys your ear to a local JBoss AS container -->
-            <!-- Due to Maven's lack of intelligence with EARs we need to configure
-                the jboss-as maven plugin to skip deployment for all modules. We then enable
-                it specifically in the ear module. -->
-            <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <configuration>
-                    <!-- Username and password used for jenkins -->
-                    <username>admin</username>
-                    <password>1snelhest!</password>
-                    <skip>false</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+					</modules>
+				</configuration>
+			</plugin>
+			<!-- The JBoss AS plugin deploys your ear to a local JBoss AS container -->
+			<!-- Due to Maven's lack of intelligence with EARs we need to configure
+				the jboss-as maven plugin to skip deployment for all modules. We then enable
+				it specifically in the ear module. -->
+			<plugin>
+				<groupId>org.jboss.as.plugins</groupId>
+				<artifactId>jboss-as-maven-plugin</artifactId>
+				<configuration>
+					<!-- Username and password used for jenkins -->
+					<username>admin</username>
+					<password>1snelhest!</password>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
