--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,16 @@
 		</param-value>
 	</context-param>
 
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Web</web-resource-name>
+			<url-pattern>*.html</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
