--- a/rest-war/src/main/webapp/WEB-INF/web.xml
+++ b/rest-war/src/main/webapp/WEB-INF/web.xml
@@ -42,8 +42,24 @@
 	</servlet-mapping>
 
 	<error-page>
+		<error-code>400</error-code>
+		<location>/400</location>
+	</error-page>
+	<error-page>
+		<error-code>401</error-code>
+		<location>/401</location>
+	</error-page>
+	<error-page>
 		<error-code>404</error-code>
 		<location>/404</location>
+	</error-page>
+	<error-page>
+		<error-code>409</error-code>
+		<location>/409</location>
+	</error-page>
+	<error-page>
+		<error-code>429</error-code>
+		<location>/429</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
